Alterado retorno
Alterado retorno do ResourceService para resolver problema de array values. Alterado nome de retornos para ingles.
